crates/test-files/fixtures/compile_errors/bad_ingot/src/biz/bad.fe
pub struct Bur {}

pub struct Bud {}
